--- a/myApp/composer.json
+++ b/myApp/composer.json
@@ -8,6 +8,8 @@
         "php": "^8.2",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
+        "league/omnipay": "^3.2",
+        "omnipay/paypal": "^3.0",
         "php-ffmpeg/php-ffmpeg": "^1.2"
     },
     "require-dev": {
